diesel_compile_tests/tests/fail/distinct_on_requires_matching_order_clause.stderr
error[E0308]: mismatched types
  --> tests/fail/distinct_on_requires_matching_order_clause.rs:55:58
   |
55 |     let _ = users::table.order_by(users::id).distinct_on(users::name);
   |                                                          ^^^^^^^^^^^ expected struct `columns::id`, found struct `columns::name`

error[E0308]: mismatched types
  --> tests/fail/distinct_on_requires_matching_order_clause.rs:59:73
   |
59 |     let _ = users::table.order_by((users::id, users::name)).distinct_on(users::name);
   |                                                                         ^^^^^^^^^^^ expected struct `columns::id`, found struct `columns::name`

error[E0308]: mismatched types
  --> tests/fail/distinct_on_requires_matching_order_clause.rs:65:22
   |
65 |         .distinct_on(users::name);
   |                      ^^^^^^^^^^^ expected struct `columns::id`, found struct `columns::name`

error[E0277]: the trait bound `diesel::query_builder::order_clause::OrderClause<columns::id>: query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<columns::name>>` is not satisfied
  --> tests/fail/distinct_on_requires_matching_order_clause.rs:69:51
   |
69 |     let _ = users::table.distinct_on(users::name).order_by(users::id);
   |                                                   ^^^^^^^^ the trait `query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<columns::name>>` is not implemented for `diesel::query_builder::order_clause::OrderClause<columns::id>`
   |
   = help: the following implementations were found:
             <diesel::query_builder::order_clause::OrderClause<(T,)> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<T>>>
             <diesel::query_builder::order_clause::OrderClause<(__D, T0)> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<__D>>>
             <diesel::query_builder::order_clause::OrderClause<(__D, T0, T1)> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<__D>>>
             <diesel::query_builder::order_clause::OrderClause<(__D, T0, T1, T2)> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<__D>>>
           and 14 others
   = note: required because of the requirements on the impl of `OrderDsl<columns::id>` for `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::DefaultSelectClause<FromClause<users::table>>, DistinctOnClause<columns::name>>`

error[E0308]: mismatched types
  --> tests/fail/distinct_on_requires_matching_order_clause.rs:72:58
   |
72 |     let _ = users::table.order_by(users::id).distinct_on(users::name).into_boxed();
   |                                                          ^^^^^^^^^^^ expected struct `columns::id`, found struct `columns::name`

error[E0308]: mismatched types
  --> tests/fail/distinct_on_requires_matching_order_clause.rs:76:22
   |
76 |         .distinct_on(users::name)
   |                      ^^^^^^^^^^^ expected struct `columns::id`, found struct `columns::name`

error[E0308]: mismatched types
  --> tests/fail/distinct_on_requires_matching_order_clause.rs:83:22
   |
83 |         .distinct_on(users::name)
   |                      ^^^^^^^^^^^ expected struct `columns::id`, found struct `columns::name`

error[E0277]: the trait bound `diesel::query_builder::order_clause::OrderClause<columns::id>: query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<columns::name>>` is not satisfied
  --> tests/fail/distinct_on_requires_matching_order_clause.rs:90:10
   |
90 |         .order_by(users::id)
   |          ^^^^^^^^ the trait `query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<columns::name>>` is not implemented for `diesel::query_builder::order_clause::OrderClause<columns::id>`
   |
   = help: the following implementations were found:
             <diesel::query_builder::order_clause::OrderClause<(T,)> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<T>>>
             <diesel::query_builder::order_clause::OrderClause<(__D, T0)> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<__D>>>
             <diesel::query_builder::order_clause::OrderClause<(__D, T0, T1)> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<__D>>>
             <diesel::query_builder::order_clause::OrderClause<(__D, T0, T1, T2)> as query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<__D>>>
           and 14 others
   = note: required because of the requirements on the impl of `OrderDsl<columns::id>` for `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::DefaultSelectClause<FromClause<users::table>>, DistinctOnClause<columns::name>>`
